# sfb-project

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  app.py  copilot-instructions.md  pyproject.toml  requirements.txt  tox.ini  webapp.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: python.yml
docs/: architecture.md  contributor-guide.md  dev-setup.md  roadmap-scenario1.md
docs/ai/: ai-roadmap.md
docs/ui/: ui-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: __init__.py  add_init_files.py  check_init_files.py
sfb/combat/: arc.py  combat.py  phaser.py
sfb/core/: dice.py  engine.py  entity.py  map.py  ship.py
sfb/dac/: dac.py
sfb/data/dac/: standard_dac.yaml
sfb/data/scenarios/: scenario_1.yaml
sfb/data/weapons/: phaser_1.yaml
sfb/game/: __init__.py  logger.py  state.py  visualizer.py
sfb/io/: yaml_loader.py
sfb/movement/: movement.py
sfb/scenarios/: __init__.py  loader.py  scenario.py  scenario1.py  victory.py
sfb/ships/: damage_box.py  ship_ssd.py  system_track.py
sfb/units/: drone.py  ship.py
sfb/utils/: loader.py
tests/: __init__.py  conftest.py  test_arc.py  test_combat.py  test_combat_system.py  test_core_ship.py  test_dac.py  test_damage_box.py  test_dice.py  test_engine.py  test_entity.py  test_game_state.py  test_integration.py  test_loader.py  test_logger.py  test_map.py  test_movement.py  test_phaser.py  test_scenario1.py  test_ship_ssd.py  test_system_track.py  test_units.py
